[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "FastAPI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]

[tool.uv.workspace]
members = ["alembic"]
